# radvel

./: .coveragerc  .coveralls.yml  .dockerignore  .gitattributes  .gitignore  .landscape.yml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CLAUDE.md  Dockerfile  ExampleConfig.py  LICENSE  MANIFEST.in  README.md  build_hook.py  docker-compose.yml  fitting.py  mock.py  model.py  mytest.py  obs.py  pyproject.toml  requirements.txt  rv_drive_profile.txt  rvlin.py  setup.py  travis_test.py  travis_tests.py  version_testing.travis.yml
.github/workflows/: ci.yml  docker.yml
data/: 164922_fixed.txt  164922_fixed.txt~
data/epic201367065/: epic201367065.txt
data/epic201505350/: epic201505350.txt
data/epic201546283/: epic201546283.txt
data/epic201713348/: epic201713348.txt
data/epic202089657/: epic202089657.txt
data/epic203826436/: epic203826436.txt
data/epic204129699/: epic204129699.txt
data/epic204221263/: epic204221263.txt
data/epic205071984/: epic205071984.txt
data/epic206011496/: epic206011496.txt
data/epic206245553/: epic206245553.txt
data/epic206247743/: epic206247743.txt
data/epic210402237/: epic210402237.txt
data/epic211391664/: epic211391664.txt
data/epic211736671/: epic211736671.txt
data/epic211800191/: epic211800191.txt
data/epic211945201/: epic211945201.txt
data/k00085/: k00085.txt
data/output/: epic201367065_post_summary.txt  epic201505350_post_summary.txt  epic201546283_post_summary.txt  epic201713348_post_summary.txt  epic202089657_post_summary.txt  epic204221263_post_summary.txt  k00085_post_summary.txt
data/wasp47/: wasp47.txt
docs/: Makefile  OSX-multiprocessing.rst  api.rst  api_service.rst  autocorrintro.rst  basis.rst  changelog.rst  conf.py  driver.rst  fitting.rst  gp.rst  index.rst  installation.rst  k2-24.rst  likelihood.rst  make.bat  mcmc.rst  mcmc_plots.rst  model.rst  orbit.rst  orbit_plots.rst  plot.rst  plotting.rst  posterior.rst  prior.rst  quickstart.rst  quickstartcli.rst  report.rst  requirements.txt  tutorials.rst  ui_guide.rst  utils.rst
docs/tests/: 164922_Fitting+MCMC.ipynb  GaussianProcess-tutorial.ipynb  SyntheticData.ipynb
docs/tutorials/: 164922_Fitting+MCMC.ipynb  164922_Fitting_BICtests.ipynb  164922_Fitting_BICtests_3.ipynb  CustomModel-tutorial.ipynb  GaussianProcess-tutorial.ipynb  K2-24_Fitting+MCMC.ipynb  K2-24_Fitting_NS.ipynb  NumericalPrior-tutorial.ipynb  SyntheticData.ipynb  toi141_fitting_nested_sampling.py
example_data/: epic203771098.hdf  epic206011496.txt  epic228b.txt  k2-131.txt  kepler21b.txt
example_planets/: HD164922.py  HD164922_sarahtest.py  Kepler21_GP.py  epic203771098.py  epic228.py  k2-131.py  k2-131_celerite.py
example_planets/HD164922/: HD164922_post_obj.pkl  HD164922_radvel.stat  HD164922_results.tex
example_planets/k2-131/: k2-131_post_obj.pkl  k2-131_radvel.stat
example_planets/k2-131_celerite/: k2-131_celerite_post_obj.pkl  k2-131_celerite_radvel.stat
radvel/: __init__.py  basis.py  cli.py  distributions.py  driver.py  fitting.py  gaussian_process.py  gp.py  kepfit.py  kepler.py  likelihood.py  mcmc.py  mcmc_serial.py  model.py  nested_sampling.py  orbit.py  pars.py  plotting.py  posterior.py  prior.py  pymc3.py  report.py  restrict.py  rv_drive.py  rvkep.py  rvlin.py  sampling.py  test.py  utils.py
radvel/api/: __init__.py  config.py  drivers_adapter.py  jobs.py  main.py  progress.py  runs.py  schemas.py
radvel/data/: 164922.hdf  164922_fixed.txt
radvel/planets/: HD164922.py  epic201367065.py  epic201505350.py  epic201546283.py  epic201713348.py  epic202089657.py  epic203826436.py  epic204129699.py  epic204221263.py  epic205071984.py  epic206011496.py  epic206011691.py  epic206245553.py  epic206247743.py  epic210402237.py  epic211391664.py  (+5 more)
src/: _kepler.pyx  kepler.c
tests/: 164922_Fitting+MCMC.ipynb  EPIC-2037_Fitting+MCMC.ipynb  GaussianProcess-tutorial.ipynb  K2-24_Fitting+MCMC.ipynb  SyntheticData.ipynb  travis_test.py
tutorials/: 164922_Fitting+MCMC.ipynb  GaussianProcess-tutorial.ipynb  K2-24_Fitting+MCMC.ipynb  SyntheticData.ipynb  planet-parameters.hdf
(+45 files in other folders)
